# ml-kem

./: Cargo.toml  README.md
benches/: roundtrip.rs
src/: hash.rs  integer.rs  lib.rs  matrix.rs  module.rs
src/cyclotomic/: base.rs  mod.rs  ring.rs
src/kem/: kpke.rs  mlkem.rs  mod.rs
src/module/: matrix.rs  vector.rs
tests/: kat.rs
