[package]
name = "ml-kem-example"
version = "0.1.0"
edition = "2024"

[dependencies]
sha3 = "0.11.0"
subtle = "2.6.1"

[dev-dependencies]
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
criterion = "0.5"
ml-kem = "0.3.0-rc.2"
rand_core = "0.10"
libcrux-ml-kem = "0.0.8"

[[bench]]
name = "roundtrip"
harness = false
